Fix for Gtk 3.16 visible feedback for ScrolledView.
That is, on the editor without this patch the visible indicator is always
visible and over the text. This hides something like 2 or 3 lines/columns
(top, left, right and bottom).

For O808-004.

--- a/share/gps.css
+++ b/share/gps.css
@@ -357,7 +357,7 @@ GtkEntry.search {
  * Editors
  **********************************/
 
-.gutter {
+.gps_gutter {
   background-color: @gutter_background;
   color: @gutter_color;
 }
